# Rainbow

./: .gitignore  .gitmodules  BUILDING.md  CHANGES.md  CMakeLists.txt  CODING.md  README.md  rainbow-all.pro  rainbow.doxyfile
api/: header.html
rainbow/: CMakeLists.txt  rainbow.pro
rainbow-app/: CMakeLists.txt  game.config  rainbow-app.plist  rainbow-app.pro  rainbow-app.rc
rainbow-app/src/: App.cpp  App.h  main-linux.cpp  main-macos.mm
rainbow-editor/: game.config  rainbow-editor.plist  rainbow-editor.pro  rainbow-editor.rc
rainbow-editor/src/: EditorWindow.cpp  EditorWindow.h  EditorWindow.ui  GameView.cpp  GameView.h  Project.cpp  Project.h  ProjectView.ui  ProjectWizard.cpp  ProjectWizard.ui  PropertiesCamera.cpp  PropertiesCamera.h  PropertiesCamera.ui  PropertiesComponentEditor.cpp  PropertiesComponentEditor.h  PropertiesComponentEditor.ui  PropertiesLight.cpp  PropertiesLight.h  PropertiesLight.ui  PropertiesTransform.cpp  PropertiesTransform.h  PropertiesTransform.ui  PropertiesView.cpp  PropertiesView.h  PropertiesView.ui  SceneView.cpp  SceneView.h  main.cpp
rainbow/src/: Activator.cpp  Activator.h  Animation.cpp  Animation.h  Asset.cpp  Asset.h  AssetLoader.cpp  AssetLoader.h  AssetManager.cpp  AssetManager.h  Audio.cpp  Audio.h  AudioClip.cpp  AudioClip.h  AudioListener.cpp  AudioListener.h  AudioSource.cpp  AudioSource.h  Base.h  BoundingBox.cpp  BoundingBox.h  BoundingSphere.cpp  BoundingSphere.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  ColorBlendState.h  CommandBuffer.cpp  CommandBuffer.h  (+121 more)
samples/: rainbow-samples.pro  samples-all.pro
(+217 files in other folders)
